[gd_scene load_steps=9 format=2]

[ext_resource path="res://PlayerStuff/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Infra/GameHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Infra/FadeScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bosses/Anxiety/Level.gd" type="Script" id=4]
[ext_resource path="res://Bosses/Anxiety/Anxiety.tscn" type="PackedScene" id=7]
[ext_resource path="res://Life/TransitionShader.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 310.521, 350 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 889.341, 478.474 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Meditations" type="Node" parent="."]

[node name="GameHUD" parent="." instance=ExtResource( 2 )]

[node name="ArenaWalls" type="StaticBody2D" parent="." groups=[
"walls",
]]
collision_layer = 4
collision_mask = 7

[node name="TopWall" type="CollisionPolygon2D" parent="ArenaWalls"]
polygon = PoolVector2Array( 1920, 0, 1920, 30, 0, 30, 0, 0 )

[node name="BottomWall" type="CollisionPolygon2D" parent="ArenaWalls"]
polygon = PoolVector2Array( 1920, 1050, 1920, 1080, 0, 1080, 0, 1050 )

[node name="LeftWall" type="CollisionPolygon2D" parent="ArenaWalls"]
position = Vector2( 0, 1080 )
polygon = PoolVector2Array( 0, 0, 0, -1080, 30, -1080, 30, 0 )

[node name="RightWall" type="CollisionPolygon2D" parent="ArenaWalls"]
position = Vector2( 0, 1080 )
polygon = PoolVector2Array( 1890, 0, 1890, -1080, 1920, -1080, 1920, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 500 )

[node name="BoostSpawnAreaL" type="Area2D" parent="."]
position = Vector2( 500, 500 )

[node name="CollisionShape" type="CollisionShape2D" parent="BoostSpawnAreaL"]
shape = SubResource( 1 )

[node name="BoostSpawnAreaR" type="Area2D" parent="."]
position = Vector2( 1500, 500 )

[node name="CollisionShape" type="CollisionShape2D" parent="BoostSpawnAreaR"]
shape = SubResource( 1 )

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( 1000, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
position = Vector2( -38.06, 33.1489 )
shape = SubResource( 2 )

[node name="FadeScreen" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="Anxiety" parent="." instance=ExtResource( 7 )]
position = Vector2( 1026.29, 426.148 )
scale = Vector2( 0.2, 0.2 )

[node name="TimerShoot" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerMeditation" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="TransitionShader" parent="." instance=ExtResource( 8 )]
[connection signal="timeout" from="TimerShoot" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerMeditation" to="." method="_on_TimerMeditation_timeout"]
